# depsync

./: Cargo.toml  README.md  package.json  requirements.txt
lua/: depsync.lua
lua/depsync/: module.lua  util.lua
plugin/: depsync.lua
