[package]
name = "galaxy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"
bevy_panorbit_camera = "0.18.2"
rand = "0.8.5"
rand_chacha = "0.3.1"

[build-dependencies]
serde = "1.0"

[dev-dependencies]
bevy_mod_picking = "0.5.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

